--- a/Console/Console.csproj
+++ b/Console/Console.csproj
@@ -5,10 +5,12 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;x64</Platforms>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LayoutVerifier\LayoutVerifier.csproj" />
+    <ProjectReference Include="..\ObjectDumper\ObjectDumper.csproj" />
   </ItemGroup>
 
 </Project>
