--- a/ObjectDumper/ObjectDumper.csproj
+++ b/ObjectDumper/ObjectDumper.csproj
@@ -3,8 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
-
 </Project>
